# skey

./: CHANGES  INSTALL  Makefile.in  README  acconfig.h  cdefs.h  config.h.in  configure  configure.in  defines.h  err.h  errx.c  file.h  flock.c  login_cap.c  login_cap.h  md4.copyright  md4c.c  md5c.c  put.c  rmd160.c  rmd160hl.c  sha1.c  sha1hl.c  skey.c  skey.h  skey.spec  skeyaudit.c  skeyinfo.c  skeyinit.c  skeylogin.c  skeysubr.c  strlcpy.c
